@@ -1,1 +1,0 @@
-build/cvd /usr/lib/cuttlefish-common/bin/
