@@ -1,8 +1,10 @@
 cuttlefish-common (0.9.28) UNRELEASED; urgency=medium
 
+  * Include the cvd command in the base package
+
   * Explicitly specify dependency on iproute2
 
- -- Jorge E. Moreira <jemoreira@google.com>  Tue, 23 Oct 2023 08:58:58 -0700
+ -- Jorge E. Moreira <jemoreira@google.com>  Wed, 31 Jan 2024 11:40:30 -0700
 
 cuttlefish-common (0.9.27) unstable; urgency=medium
 
